# prime

./: .gitattributes  .gitignore  ACCURACY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  THESIS_PROOF.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
claude-resources/: CLAUDE.md
crates/prime-color/: Cargo.toml  README.md
crates/prime-color/src/: lib.rs
crates/prime-diffusion/: Cargo.toml  README.md
crates/prime-diffusion/src/: lib.rs
crates/prime-dynamics/: Cargo.toml  README.md
crates/prime-dynamics/benches/: dynamics_bench.rs
crates/prime-dynamics/src/: lib.rs
crates/prime-interp/: Cargo.toml  README.md
crates/prime-interp/src/: lib.rs
crates/prime-noise/: Cargo.toml  README.md
crates/prime-noise/src/: lib.rs
crates/prime-osc/: Cargo.toml  README.md
crates/prime-osc/src/: lib.rs
crates/prime-random/: Cargo.toml  README.md
crates/prime-random/benches/: prng_bench.rs
crates/prime-random/src/: lib.rs
crates/prime-render/: Cargo.toml  README.md
crates/prime-render/src/: lib.rs
crates/prime-sdf/: Cargo.toml  README.md
crates/prime-sdf/src/: lib.rs
crates/prime-sdf/src/domain/: transforms.rs
crates/prime-sdf/src/ops/: boolean.rs  mod.rs  smooth.rs
crates/prime-sdf/src/primitives/: d2.rs  d3.rs
crates/prime-signal/: Cargo.toml  README.md
crates/prime-signal/src/: lib.rs
crates/prime-spatial/: Cargo.toml  README.md
crates/prime-spatial/benches/: spatial_bench.rs
crates/prime-spatial/src/: aabb.rs  frustum.rs  lib.rs  ray.rs  research.rs
crates/prime-spatial/src/sampling/: half_heart.rs  mod.rs  rect.rs  sdf.rs  sheared.rs  triangle.rs  voronoi.rs
crates/prime-spatial/tests/: calibration.rs  coverage_stats.rs  spectral_analysis.rs
crates/prime-splines/: Cargo.toml  README.md
crates/prime-splines/src/: lib.rs
crates/prime-voronoi/: Cargo.toml  README.md
crates/prime-voronoi/benches/: voronoi_bench.rs
crates/prime-voronoi/src/: lib.rs
crates/prime-wasm/: Cargo.toml  README.md
crates/prime-wasm/src/: lib.rs
crates/stage-ai/: Cargo.toml
crates/stage-ai/src/: lib.rs
crates/stage-combat/: Cargo.toml
crates/stage-combat/src/: lib.rs
crates/stage-economy/: Cargo.toml
crates/stage-economy/src/: lib.rs
crates/stage-loop/: Cargo.toml
crates/stage-loop/src/: lib.rs
crates/stage-nav/: Cargo.toml
crates/stage-nav/src/: lib.rs
crates/stage-proc/: Cargo.toml
crates/stage-proc/src/: lib.rs
crates/stage-quest/: Cargo.toml
crates/stage-quest/src/: lib.rs
docs/: ROADMAP.md
docs/adr/: 001-pure-functions-only.md  002-seed-as-thread.md  003-four-temporal-operations.md  004-cross-language-determinism.md  005-receiver-model.md  006-causal-irrecoverability.md  007-advance-exception.md
docs/design/: ts-bindings-audit.md
docs/math/: prime-color.md  prime-diffusion.md  prime-interp.md  prime-noise.md  prime-osc.md  prime-random.md  prime-sdf.md  prime-signal.md  prime-spatial.md  prime-splines.md  prime-voronoi.md
docs/research/: parallel-spatial-sampling.md
scripts/: thesis-check.js
