[package]
name        = "prime-diffusion"
description = "Diffusion systems — Gray-Scott reaction-diffusion, cellular automata"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
keywords    = ["diffusion", "reaction-diffusion", "cellular-automata", "simulation", "procedural"]
categories  = ["mathematics", "game-engines"]

[dependencies]
prime-random = { path = "../prime-random" }
