[package]
name        = "prime-dynamics"
description = "Dynamical systems — RK4/RK45, Lorenz, Duffing, L-systems, Newton-Raphson"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
keywords    = ["ode", "dynamical-systems", "runge-kutta", "lorenz", "l-systems"]
categories  = ["mathematics", "science"]

[dependencies]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "dynamics_bench"
harness = false
