[package]
name        = "prime-noise"
description = "Noise functions — Perlin, Simplex, FBM, Worley, curl"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
keywords    = ["noise", "procedural", "graphics", "perlin", "simplex"]
categories  = ["mathematics", "game-engines"]

[dependencies]
glam = { workspace = true }
