[package]
name        = "prime-osc"
description = "Oscillators — LFO shapes, ADSR envelope"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
keywords    = ["lfo", "adsr", "audio", "oscillator", "envelope"]
categories  = ["mathematics", "game-engines"]

[dependencies]
