[package]
name        = "prime-random"
description = "Seeded randomness — PCG64 RNG, Poisson disk, weighted choice"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords    = ["random", "prng", "procedural", "deterministic", "game-dev"]
categories  = ["mathematics", "game-engines"]

[dependencies]
# rand and rand_pcg added here when prime-random is implemented
# rand     = { workspace = true }
# rand_pcg = { workspace = true }
