[package]
name        = "prime-random"
description = "Seeded randomness — Mulberry32 RNG, Poisson disk, weighted choice"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords    = ["random", "prng", "procedural", "deterministic", "game-dev"]
categories  = ["mathematics", "game-engines"]

[dependencies]
