[package]
name        = "prime-render"
description = "Pure sample-level scan loop — fold a pure step function over N audio samples"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
readme     = "README.md"
authors.workspace    = true
keywords    = ["audio", "render", "dsp", "sample-loop", "functional"]
categories  = ["mathematics", "multimedia::audio"]
