[package]
name        = "prime-sdf"
description = "Signed distance functions — 2D and 3D primitives, CSG operations, domain transforms"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
readme     = "README.md"
authors.workspace    = true
keywords    = ["sdf", "graphics", "geometry", "game-dev", "procedural"]
categories  = ["graphics", "game-engines", "mathematics"]

[dependencies]
glam = { workspace = true }
