[package]
name        = "prime-signal"
description = "Signal processing — smoothdamp, spring, low_pass, deadzone"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
keywords    = ["signal", "smoothdamp", "spring", "game-dev", "interpolation"]
categories  = ["mathematics", "game-engines"]

[dependencies]
glam = { workspace = true }
