[package]
name        = "prime-spatial"
description = "Spatial queries — ray tests, AABB, frustum culling"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
readme     = "README.md"
authors.workspace    = true
keywords    = ["spatial", "collision", "raycast", "aabb", "frustum"]
categories  = ["mathematics", "game-engines"]

[dependencies]
glam          = { workspace = true }
prime-random  = { path = "../prime-random",  version = "1.1.1" }
prime-voronoi = { path = "../prime-voronoi", version = "1.1.1" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name    = "spatial_bench"
harness = false
