[package]
name        = "prime-voronoi"
description = "Voronoi / Delaunay — cellular noise, Lloyd relaxation"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
readme     = "README.md"
authors.workspace    = true
keywords    = ["voronoi", "delaunay", "procedural", "spatial", "noise"]
categories  = ["mathematics", "game-engines"]

[dependencies]
glam         = { workspace = true }
prime-random = { path = "../prime-random", version = "1.1.1" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "voronoi_bench"
harness = false
