[package]
name        = "stage-combat"
description = "Combat math — damage, stats, scaling curves"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords    = ["combat", "game-dev", "stats", "damage", "rpg"]
categories  = ["mathematics", "game-engines"]

[dependencies]
