[package]
name        = "stage-loop"
description = "Game loop — fixed timestep accumulator, interpolation"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords    = ["game-loop", "timestep", "game-dev", "simulation", "fixed-update"]
categories  = ["mathematics", "game-engines"]

[dependencies]
