[package]
name        = "stage-nav"
description = "Navigation — A*, flow fields, SDF-native pathfinding"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords    = ["pathfinding", "navigation", "astar", "game-dev", "flowfield"]
categories  = ["mathematics", "game-engines"]

[dependencies]
glam        = { workspace = true }
prime-sdf   = { path = "../prime-sdf" }
prime-spatial = { path = "../prime-spatial" }
