[package]
name        = "stage-proc"
description = "Procedural generation — dungeon gen, BSP, biome assignment"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords    = ["procedural", "game-dev", "dungeon", "generation", "bsp"]
categories  = ["mathematics", "game-engines"]

[dependencies]
glam = { workspace = true }
# prime-random = { path = "../prime-random" }  # uncomment when prime-random is implemented
